Fix image flickering

--- a/packages/dashboard/src/components/login/loginScreen/style.less
+++ b/packages/dashboard/src/components/login/loginScreen/style.less
@@ -37,8 +37,12 @@
             padding: 25px 15px;
         }
 
-        img {
-            width: 200px;
+        .logo {
+            height: 45px;
+
+            img {
+                max-height: 45px;
+            }
         }
 
         p {
